fix: currency for tokens cut off on chrome macos

--- a/ui/app/components/app/token-cell/token-cell.scss
+++ b/ui/app/components/app/token-cell/token-cell.scss
@@ -16,7 +16,6 @@ $wallet-balance-breakpoint-range: "screen and (min-width: #{$break-large}) and (
   &__token-balance, &__token-symbol {
     font-size: 16px;
     flex: 0 0 auto;
-    height: 16px;
     color: $Black-100;
   }
 
